--- a/e_com/templates/product.html
+++ b/e_com/templates/product.html
@@ -205,7 +205,7 @@
 			<script>
 				var i = 0;
 			</script>
-			{% for item in qs %}
+			{% for item in products %}
 				<div class="col-md-3">
 				<div class="card text-center">
 					<div class="equal-column-content">
@@ -216,8 +216,8 @@
 							<h6>Price: {{item.price}}$</h6>
 							<h6>Seller Location: {{item.sellerlocation}}</h6>
 							<h6>Quantity Availabe: {{item.quantity}}</h6>
-							<a href="#cart"><i class="fa fa-shopping-cart itemIcon fa-lg" aria-hidden="true"></i></a>
-							<a href="#cart"><i class="fa fa-tags itemIcon fa-lg" aria-hidden="true"></i></a>
+							<button data-product="{{item.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
+							<a href="#cart"><i class="fa fa-tags itemIcon fa-lg" aria-hidden="true"></i></a>                            
 						</div>
 					</div>
 					</div>
