Updated-login-cart

--- a/e_com/templates/afterlogin.html
+++ b/e_com/templates/afterlogin.html
@@ -48,7 +48,7 @@
 						<a class="nav-link isActive" href="{%url 'User Login'%}">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link " href="{%url 'Shop Login'%}">Shop</a>
+						<a class="nav-link " href="{%url 'Product Page'%}">Shop</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{%url 'Seller Product Detail'%}">Become a seller </a>
